--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,75 @@
-* {
+/* * {
   --whiite: hsl(0, 0%, 100%);
   --background: hsl(30, 54%, 90%);
   --Eggshell: hsl(30, 54%, 90%);
-}
+} */
 
 body {
-  background-color: var(--background);
+  background-color: hsl(30, 54%, 90%);
+  /* font-family: "Young Serif", serif; */
+  /* font-weight: 400;
+  font-style: normal; */
+  color: hsl(30, 10%, 34%); */
+
 }
 
 img {
-  width: 50px;
+  width: 100%;
+  border-radius: 10px;
+  padding-top: 20px;
 }
 
 .quebra {
-  border: 1px rgb(175, 171, 171) solid;
+  border: 0.2px rgb(228, 226, 226) solid;
+  color: hsl(30, 10%, 34%);
 }
 
-#receita {
-  width: 300px;
+#Receita  {
+  width: 580px;
+  background-color: white;
+  margin: auto;
+  border-radius: 10px;
+  padding:5px 30px 30px;
+}
+h1{
+  color: hsl(24, 5%, 18%);
+
+}
+h2{
+  color: hsl(14, 45%, 36%);
+}
+
+#timer{
+  /* border: 1px red  solid; */
+  padding: 20px;
+  /* background-color: hsla(332, 51%, 32%, 0.05); */
+  background-color: hsl(330, 100%, 98%);
+  
+}
+S
+#timer h3{
+  color: hsl(332, 51%, 32%) ;
+  margin: 0px;
+}
+
+li{
+  line-height: 30px;
+}
+
+p{
+  font-size: 16px;
+}
+
+table,tr{
+  width: 80%;
+  padding: 20px;
+  margin: 5px;
+  border: 1px black solid;
+  border-collapse: collapse;
+
+
+}
+
+.dados{
+  color:hsl(24, 5%, 18%) ;
 }
